--- a/src/components/Homepage/MissionAndVision/MissionAndVision.module.css
+++ b/src/components/Homepage/MissionAndVision/MissionAndVision.module.css
@@ -1,4 +1,56 @@
-.advMVCard{
-    border: 3px solid rgb(2, 72, 2);
-    background: linear-gradient(0deg, rgba(29,60,253,1) 0%, rgba(82,195,249,1) 50%, rgba(246,252,252,1) 100%); 
+.advMVCard {
+  border: 3px solid rgb(2, 72, 2);
+  background-color: #b4b4f6;
+  opacity: 0.8;
+  background-image: linear-gradient(
+      30deg,
+      #f4f7f8 12%,
+      transparent 12.5%,
+      transparent 87%,
+      #f4f7f8 87.5%,
+      #f4f7f8
+    ),
+    linear-gradient(
+      150deg,
+      #f4f7f8 12%,
+      transparent 12.5%,
+      transparent 87%,
+      #f4f7f8 87.5%,
+      #f4f7f8
+    ),
+    linear-gradient(
+      30deg,
+      #f4f7f8 12%,
+      transparent 12.5%,
+      transparent 87%,
+      #f4f7f8 87.5%,
+      #f4f7f8
+    ),
+    linear-gradient(
+      150deg,
+      #f4f7f8 12%,
+      transparent 12.5%,
+      transparent 87%,
+      #f4f7f8 87.5%,
+      #f4f7f8
+    ),
+    linear-gradient(
+      60deg,
+      #f4f7f877 25%,
+      transparent 25.5%,
+      transparent 75%,
+      #f4f7f877 75%,
+      #f4f7f877
+    ),
+    linear-gradient(
+      60deg,
+      #f4f7f877 25%,
+      transparent 25.5%,
+      transparent 75%,
+      #f4f7f877 75%,
+      #f4f7f877
+    );
+  background-size: 20px 35px;
+  background-position: 0 0, 0 0, 10px 18px, 10px 18px, 0 0, 10px 18px;
+  color: rgb(11, 4, 28);
 }
