--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,45 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.envelop {
+  height: 100%;
+  background: radial-gradient(
+      #f0cdd2 15%,
+      transparent 16%,
+      transparent 49%,
+      #f0cdd2 50%,
+      transparent 51%
+    ),
+    radial-gradient(
+      circle at top left,
+      #f0cdd2 10%,
+      transparent 10%,
+      transparent 39%,
+      #f0cdd2 40%,
+      transparent 41%
+    ),
+    radial-gradient(
+      circle at top right,
+      #f0cdd2 10%,
+      transparent 10%,
+      transparent 39%,
+      #f0cdd2 40%,
+      transparent 41%
+    ),
+    radial-gradient(
+      circle at bottom left,
+      #f0cdd2 10%,
+      transparent 10%,
+      transparent 39%,
+      #f0cdd2 40%,
+      transparent 41%
+    ),
+    radial-gradient(
+      circle at bottom right,
+      #f0cdd2 10%,
+      transparent 10%,
+      transparent 39%,
+      #f0cdd2 40%,
+      transparent 41%
+    );
+  background-size: 6em 6em;
+  background-color: #e2f0de;
+  opacity: 1;
 }
