--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -11,7 +11,8 @@
   min-height: 100px;
   padding: 20px 50px;
   display: flex;
-  height: 200px;
+  height: 250px;
+  color: #46fd03;
 }
 
 .wave {
@@ -72,4 +73,12 @@
 
 .mt80 {
   margin-top: 80px;
+}
+
+.footerLink{
+  display: flex;
+  justify-content: center;
+  text-decoration: none;
+  margin: auto;
+  color: inherit;
 }
